--- a/src/app/v2/modules/project-search/project-search.component.html
+++ b/src/app/v2/modules/project-search/project-search.component.html
@@ -32,7 +32,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/buscadores"
+            href="/"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Buscadores
@@ -53,10 +53,10 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/buscadores/cursos"
+            href="/buscador-financiamiento"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
-            Cursos
+            Financiamiento
           </a>
         </li>
       </ol>
@@ -67,9 +67,25 @@
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Search and Results -->
   <div class="w-full lg:w-3/4 pr-8">
-    <h2 class="text-2xl font-bold mb-6">Cursos</h2>
+    <h2 class="text-2xl font-bold mb-6">Financiamiento</h2>
+    <!-- Tips y Mensajes Dinámicos -->
+    <div class="mb-3 position-relative" style="min-height: 1.5em">
+      <h5
+        *ngIf="searchTip && searchMessage.length === 0"
+        class="text-muted position-absolute top-0 start-0"
+      >
+        {{ searchTip }}
+      </h5>
+      <h5
+        *ngIf="searchMessage"
+        class="text-muted position-absolute top-0 start-0"
+      >
+        {{ searchMessage }}
+      </h5>
+    </div>
+
     <!-- Formulario de búsqueda -->
-    <form class="flex items-center mb-8">
+    <div class="flex items-center mb-3">
       <label for="simple-search" class="sr-only">Buscar</label>
       <div class="relative w-full">
         <div
@@ -92,13 +108,39 @@
         <input
           type="text"
           id="simple-search"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-text-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          placeholder="Buscar ..."
+          [(ngModel)]="searchInput"
+          (ngModelChange)="onSearchInputChange()"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5"
+          placeholder="Buscar artículos..."
           required
         />
+        <div
+          style="width: 32px; padding-left: 0px; cursor: pointer"
+          class="absolute inset-y-0 right-0 flex items-center pl-3"
+          type="button"
+          (click)="clearSearch()"
+          *ngIf="searchInput.trim().length > 0"
+          id="clearButton"
+          aria-label="Limpiar búsqueda"
+        >
+          <svg
+            aria-hidden="true"
+            class="w-5 h-5 text-gray-500 dark:text-gray-400"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 011.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </div>
       </div>
       <button
         type="submit"
+        (click)="onSearchInputChange()"
         class="p-2.5 ml-2 text-sm font-medium text-white bg-blue-700 border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
       >
         <svg
@@ -117,131 +159,107 @@
         </svg>
         <span class="sr-only">Buscar</span>
       </button>
-    </form>
+    </div>
+
+    <!-- Palabras Clave Sugeridas -->
+    <div class="mb-8">
+      <span class="me-2">Buscar:</span>
+      <span
+        style="padding: 4px 12px"
+        class="badge border border-blue-100 text-blue-600 px-2 py-1 text-xs suggested-term me-2 mb-2 text-xs"
+        *ngFor="
+          let term of [
+            'gemelos digitales',
+            'impresión 3D',
+            'saas',
+            'innovación',
+            'sostenibilidad'
+          ]
+        "
+        (click)="addSuggestedTerm(term)"
+        (keypress)="handleKeyPress($event, term)"
+        tabindex="0"
+        role="button"
+        [attr.aria-label]="'Buscar ' + (term === 'ingles' ? 'En Inglés' : term)"
+      >
+        {{
+          term === "ingles"
+            ? "En Inglés"
+            : term === "inteligencia artificial"
+            ? "IA"
+            : (term | titlecase)
+        }}
+      </span>
+    </div>
+
+    <!-- texto estatus -->
+    <div>
+      <div class="form-text text-center text-muted mt-2 mb-3">
+        {{ resultCount }}
+      </div>
+      <div
+        class="text-center my-4"
+        *ngIf="isLoading"
+        aria-live="polite"
+        aria-busy="true"
+      >
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Cargando...</span>
+        </div>
+      </div>
+    </div>
+
     <!-- Resultados de búsqueda simulados -->
     <div class="space-y-8">
       <!-- Resultado 1 -->
-      <div class="group">
-        <a href="#" class="text-xl font-semibold text-blue-600 hover:underline">
-          Lorem ipsum dolor sit amet, consectetur</a
+      @for (item of results; track $index) {
+      <div
+        class="group"
+        (click)="openModal($index)"
+        (keypress.enter)="openModal($index)"
+        (keypress.space)="openModal($index)"
+      >
+        <a class="text-xl font-semibold text-blue-600 hover:underline">
+          {{ item.titulo }}
+        </a>
+
+        <!-- Etiquetas de los articulos -->
+        <p class="mb-1 flex flex-wrap gap-1">
+          <span
+            *ngIf="item.origen_"
+            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+            >Origen: {{ item.origen_ }}</span
+          >
+          <span
+            *ngIf="item.localidad"
+            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+            >Localidad: {{ item.localidad }}</span
+          >
+          <span
+            *ngIf="item.aplicabilidad_regional_"
+            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+            >Aplicabilidad Regional: {{ item.aplicabilidad_regional_ }}</span
+          >
+        </p>
+        <!-- Descripción del curso -->
+        <span
+          [innerHTML]="
+            sanitizedResumen(
+              item.resumen_de_la_solucion_ | truncate : 400 : true
+            )
+          "
         >
-        <p class="text-gray-600">
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-        </p>
-        <p class="mt-2 text-gray-700">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim
-        </p>
+        </span>
       </div>
-      <!-- Resultado 1 -->
-      <div class="group">
-        <a href="#" class="text-xl font-semibold text-blue-600 hover:underline">
-          Lorem ipsum dolor sit amet, consectetur</a
-        >
-        <p class="text-gray-600">
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-        </p>
-        <p class="mt-2 text-gray-700">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim
-        </p>
-      </div>
-      <!-- Resultado 1 -->
-      <div class="group">
-        <a href="#" class="text-xl font-semibold text-blue-600 hover:underline">
-          Lorem ipsum dolor sit amet, consectetur</a
-        >
-        <p class="text-gray-600">
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-        </p>
-        <p class="mt-2 text-gray-700">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim
-        </p>
-      </div>
-      <!-- Resultado 1 -->
-      <div class="group">
-        <a href="#" class="text-xl font-semibold text-blue-600 hover:underline">
-          Lorem ipsum dolor sit amet, consectetur</a
-        >
-        <p class="text-gray-600">
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-        </p>
-        <p class="mt-2 text-gray-700">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim
-        </p>
-      </div>
-      <!-- Resultado 1 -->
-      <div class="group">
-        <a href="#" class="text-xl font-semibold text-blue-600 hover:underline">
-          Lorem ipsum dolor sit amet, consectetur</a
-        >
-        <p class="text-gray-600">
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-          <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs">
-            Lorem ipsum</span
-          >
-        </p>
-        <p class="mt-2 text-gray-700">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim
-        </p>
-      </div>
+      <p style="margin-top: 0px">
+        <small style="color: gray" class="text-secondary"
+          >Sitio web: {{ getDomain(item.link) }}
+        </small>
+      </p>
+      }
     </div>
     <!-- Paginación -->
+    <!--
     <ol class="flex text-xs font-medium space-x-1 mt-5">
       <li>
         <a
@@ -298,7 +316,137 @@
         ></a>
       </li>
     </ol>
+    -->
   </div>
   <!-- Artículos sugeridos -->
   <app-sugeridos></app-sugeridos>
 </main>
+
+<div
+  id="large-modal"
+  *ngIf="isModalOpen && dataModal"
+  tabindex="-1"
+  class="fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full flex items-center justify-center bg-black bg-opacity-50"
+>
+  <div class="relative w-full max-w-4xl max-h-full">
+    <!-- Modal content -->
+    <div class="relative bg-white rounded-lg shadow">
+      <!-- Modal header -->
+      <div
+        class="flex items-center justify-between p-4 md:p-5 border-b rounded-t"
+      >
+        <h3 class="text-xl font-semibold text-blue-900">
+          {{ dataModal.titulo }}
+        </h3>
+        <button
+          type="button"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+          data-modal-hide="large-modal"
+          (click)="closeModal()"
+        >
+          <svg
+            class="w-3 h-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 14"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="p-4 md:p-5 space-y-4">
+        <p class="mb-1 flex flex-wrap gap-1">
+          <span
+            *ngIf="dataModal.origen_"
+            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+            >Origen: {{ dataModal.origen_ }}</span
+          >
+          <span
+            *ngIf="dataModal.localidad"
+            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+            >Localidad: {{ dataModal.localidad }}</span
+          >
+          <span
+            *ngIf="dataModal.aplicabilidad_regional_"
+            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
+            >Aplicabilidad Regional:
+            {{ dataModal.aplicabilidad_regional_ }}</span
+          >
+        </p>
+        <p>
+          <strong>Resumen de la Solución:</strong>
+        </p>
+        <span
+          [innerHTML]="sanitizedResumen(dataModal.resumen_de_la_solucion_)"
+        ></span>
+        <p>
+          <small style="color: gray" class="text-secondary"
+            >Sitio web: {{ getDomain(dataModal.link) }}</small
+          >
+        </p>
+      </div>
+      <!-- Modal footer -->
+      <div
+        style="width: 100%; justify-content: right"
+        class="flex items-center p-4 md:p-5 space-x-3 rtl:space-x-reverse border-t border-gray-200 rounded-b"
+      >
+        <button
+          data-modal-hide="large-modal"
+          type="button"
+          (click)="openLink(dataModal.link)"
+          style="gap: 6px; padding: 8px 16px"
+          class="border border-blue-100 text-blue bg-blue-white hover:bg-white-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center"
+        >
+          <svg
+            class="w-6 h-6 text-blue-800"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M8.64 4.737A7.97 7.97 0 0 1 12 4a7.997 7.997 0 0 1 6.933 4.006h-.738c-.65 0-1.177.25-1.177.9 0 .33 0 2.04-2.026 2.008-1.972 0-1.972-1.732-1.972-2.008 0-1.429-.787-1.65-1.752-1.923-.374-.105-.774-.218-1.166-.411-1.004-.497-1.347-1.183-1.461-1.835ZM6 4a10.06 10.06 0 0 0-2.812 3.27A9.956 9.956 0 0 0 2 12c0 5.289 4.106 9.619 9.304 9.976l.054.004a10.12 10.12 0 0 0 1.155.007h.002a10.024 10.024 0 0 0 1.5-.19 9.925 9.925 0 0 0 2.259-.754 10.041 10.041 0 0 0 4.987-5.263A9.917 9.917 0 0 0 22 12a10.025 10.025 0 0 0-.315-2.5A10.001 10.001 0 0 0 12 2a9.964 9.964 0 0 0-6 2Zm13.372 11.113a2.575 2.575 0 0 0-.75-.112h-.217A3.405 3.405 0 0 0 15 18.405v1.014a8.027 8.027 0 0 0 4.372-4.307ZM12.114 20H12A8 8 0 0 1 5.1 7.95c.95.541 1.421 1.537 1.835 2.415.209.441.403.853.637 1.162.54.712 1.063 1.019 1.591 1.328.52.305 1.047.613 1.6 1.316 1.44 1.825 1.419 4.366 1.35 5.828Z"
+              clip-rule="evenodd"
+            />
+          </svg>
+
+          Ir al artículo
+        </button>
+        <button
+          type="button"
+          (click)="showNextItem()"
+          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        >
+          Siguiente
+          <svg
+            class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 10"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M1 5h12m0 0L9 1m4 4L9 9"
+            />
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
