--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -1,80 +1,411 @@
-<p>evaluaciones-madurez works!</p>
-<p>authState:{{ authState() }}</p>
-<p>currentUser:{{ currentUser()?.rol?.nombreRol }}</p>
-<!--Login -->
-@if (authState()===AuthState.LoggedIn && currentUser()?.rol?.nombreRol ===
-Role.Empresa && modeloMadurez()) {
-<p>tipo empresa con modelo</p>
-}
-<!--Login-->
+<div>
+  <!--Login como empresa y modelo completado-->
+  @if (authState()===AuthState.LoggedIn && currentUser()?.rol?.nombreRol ===
+  Role.Empresa) {
+  <section class="max-w-7xl mx-auto px-4 py-8">
+    <!-- Company Header -->
+    <h1 class="text-4xl font-bold text-gray-700 mb-8">
+      <strong>Empresa:</strong>
+      {{ currentUser()?.nombreEmpresa ?? "No disponible" }}
+    </h1>
+    @if (modeloMadurez()) {
+    <h2 class="text-xl font-bold text-gray-700 mb-8">
+      <strong>Tipo de industria:</strong>
+      {{
+        modeloMadurez()![0].IndustryName
+          ? modeloMadurez()![0].IndustryName
+          : "No especificado"
+      }}
+    </h2>
+    }
 
-@if (authState() === AuthState.LoggedIn && currentUser()?.rol?.nombreRol ===
-Role.Empresa && !modeloMadurez()) {
-<p>tipo empresa sin modelo</p>
-}
-<div class="max-w-7xl mx-auto px-4 py-8">
-  <!-- Company Header -->
-  <h1 class="text-4xl font-bold text-gray-700 mb-8">NOMBRE DE LA EMPRESA</h1>
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+      <div class="lg:col-span-2">
+        <!-- Evaluation Status Section -->
+        <div class="mb-8">
+          <h2 class="text-2xl text-gray-600 mb-4">Completa tus Modelos</h2>
+          <p class="text-gray-500 mb-6">
+            Actualmente, tu Modelo de Maduración tecnológica para la Industria
+            4.0 aún no ha sido completado. Te invitamos a evaluar el nivel de
+            madurez tecnológica de tu empresa y a conocer las acciones
+            necesarias para alcanzar la madurez tecnológica. Para completar el
+            modelo y acceder a todas sus funcionalidades.
+          </p>
+          <p class="text-gray-500 mb-6">
+            Por favor, haz clic en el botón a continuación:
+          </p>
+        </div>
+      </div>
 
-  <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-    <div class="lg:col-span-2">
-      <!-- Evaluation Status Section -->
-      <div class="mb-8">
-        <h2 class="text-2xl text-gray-600 mb-4">Estado evaluaciones</h2>
-        <p class="text-gray-500 mb-6">
-          Lorem Epson Lorem Epson Lorem EpsonLorem EpsonLorem EpsonLorem
-          EpsonLorem EpsonLorem EpsonLorem EpsonLorem EpsonLorem Epso
-        </p>
-
-        <div class="flex flex-wrap gap-4">
-          <button
-            class="px-6 py-2 bg-yellow-400 text-gray-700 rounded hover:bg-yellow-400/90 transition"
+      <!-- Take Survey Button -->
+      <div class="lg:col-span-1">
+        <!--Modelo de madurez-->
+        @if (modeloMadurez()) {
+        <button
+          disabled
+          (click)="openLink()"
+          class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700"
+        >
+          Modelo de Maduración Tecnológica Realizado en
+          {{ modeloMadurez()![0].DateTime }}
+          <svg
+            aria-hidden="true"
+            class="w-5 h-5 text-blue-700"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
           >
-            Estado encuesta 1
-          </button>
+            <path
+              fill-rule="evenodd"
+              d="M16.707 5.293a1 1 0 010 1.414L8.414 15 5 11.586a1 1 0 011.414-1.414L8.414 12.172l7.879-7.879a1 1 0 011.414 0z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </button>
+        }@else {
+        <div class="lg:col-span-1">
           <button
-            class="px-6 py-2 bg-yellow-400 text-gray-700 rounded hover:bg-yellow-400/90 transition"
+            (click)="openLink()"
+            class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700 hover:bg-gray-100 transition"
           >
-            Estado encuesta 2
+            Realizar Modelo de Maduración Tecnológica
           </button>
+        </div>
+        }
+
+        <!--Modelo de Formacion-->
+        @if (modeloFormacion() === true) {
+        <button
+          disabled
+          style="justify-content: center; gap: 12px"
+          (click)="openLinkFormacion()"
+          class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700"
+        >
+          Modelo de Formación Realizado
+          <svg
+            aria-hidden="true"
+            class="w-5 h-5 text-blue-700"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M16.707 5.293a1 1 0 010 1.414L8.414 15 5 11.586a1 1 0 011.414-1.414L8.414 12.172l7.879-7.879a1 1 0 011.414 0z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </button>
+
+        }@else if (modeloFormacion() === false) {
+        <div class="lg:col-span-1">
+          <button
+            style="justify-content: center"
+            (click)="openLinkFormacion()"
+            class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700 hover:bg-gray-100 transition"
+          >
+            Realizar Modelo de Formación
+          </button>
+        </div>
+        }
+      </div>
+    </div>
+
+    <!-- Maturity Results Section -->
+    @if (modeloMadurez()) {
+    <div class="mt-8">
+      <div class="bg-yellow-500 py-3 px-4 mb-8">
+        <h2 class="text-2xl text-gray-600">Resultado madurez</h2>
+      </div>
+
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+        <!-- Radar Chart -->
+        <!-- Gráfico Radar -->
+        <div class="w-full">
+          <canvas #radarChartCanvas></canvas>
+        </div>
+
+        <!-- Capital Humano Sections -->
+        <div class="space-y-6">
+          <div class="space-y-2">
+            <h3 class="text-xl font-bold text-gray-700">
+              CAPITAL HUMANO: Grado
+              {{
+                letterToNumberDescASCII(modeloMadurez()![0].GradeCapitalHumano)
+              }}
+            </h3>
+            <p class="text-gray-600">
+              {{
+                capitalHumanoSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeCapitalHumano
+                  )
+                ].estado
+              }}
+            </p>
+            <p class="text-gray-600">
+              <strong>Sugerencia: </strong>
+              {{
+                capitalHumanoSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeCapitalHumano
+                  )
+                ].sugerencia
+              }}
+            </p>
+          </div>
+
+          <!--Estrategia-->
+          <div class="space-y-2">
+            <h3 class="text-xl font-bold text-gray-700">
+              ESTRATEGIA: Grado
+              {{
+                letterToNumberDescASCII(
+                  modeloMadurez()![0].GradeEstrategiaLiderazgo
+                )
+              }}
+            </h3>
+            <p class="text-gray-600">
+              {{
+                estrategiaSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeEstrategiaLiderazgo
+                  )
+                ].estado
+              }}
+            </p>
+            <p class="text-gray-600">
+              <strong>Sugerencia: </strong>
+              {{
+                estrategiaSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeEstrategiaLiderazgo
+                  )
+                ].sugerencia
+              }}
+            </p>
+          </div>
+          <!-- TECNOLOGIA Sections -->
+          <div class="space-y-2">
+            <h3 class="text-xl font-bold text-gray-700">
+              TECNOLOGIAS: Grado
+              {{
+                letterToNumberDescASCII(
+                  modeloMadurez()![0].GradeTecnologiaGestionDatos
+                )
+              }}
+            </h3>
+            <p class="text-gray-600">
+              {{
+                tecnologiaSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeTecnologiaGestionDatos
+                  )
+                ].estado
+              }}
+            </p>
+            <p class="text-gray-600">
+              <strong>Sugerencia: </strong>
+              {{
+                tecnologiaSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeTecnologiaGestionDatos
+                  )
+                ].sugerencia
+              }}
+            </p>
+          </div>
+          <!-- innovacion Sections -->
+          <div class="space-y-2">
+            <h3 class="text-xl font-bold text-gray-700">
+              GESTION DE INNOVACION: Grado
+              {{
+                letterToNumberDescASCII(
+                  modeloMadurez()![0].GradeGestionInnovacionConocimiento
+                )
+              }}
+            </h3>
+            <p class="text-gray-600">
+              {{
+                innovacionSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeGestionInnovacionConocimiento
+                  )
+                ].estado
+              }}
+            </p>
+            <p class="text-gray-600">
+              <strong>Sugerencia: </strong>
+              {{
+                innovacionSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeGestionInnovacionConocimiento
+                  )
+                ].sugerencia
+              }}
+            </p>
+          </div>
+          <!-- automatizaacion Sections -->
+          <div class="space-y-2">
+            <h3 class="text-xl font-bold text-gray-700">
+              AUTOMATIZACION: Grado
+              {{
+                letterToNumberDescASCII(
+                  modeloMadurez()![0].GradeProcesosAutomatizacion
+                )
+              }}
+            </h3>
+            <p class="text-gray-600">
+              {{
+                automatizacionSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeProcesosAutomatizacion
+                  )
+                ].estado
+              }}
+            </p>
+            <p class="text-gray-600">
+              <strong>Sugerencia: </strong>
+              {{
+                automatizacionSections[
+                  letterToNumberDescASCII(
+                    modeloMadurez()![0].GradeProcesosAutomatizacion
+                  )
+                ].sugerencia
+              }}
+            </p>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- Take Survey Button -->
-    <div class="lg:col-span-1">
-      <button
-        class="w-full p-8 bg-yellow-400 text-gray-700 rounded-lg hover:bg-yellow-400/90 transition text-xl"
-      >
-        Realizar encuesta
-      </button>
-    </div>
-  </div>
-
-  <!-- Maturity Results Section -->
-  <div class="mt-8">
-    <div class="bg-teal-200 py-3 px-4 mb-8">
-      <h2 class="text-2xl text-gray-600">Resultado madurez</h2>
-    </div>
-
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-      <!-- Radar Chart -->
-      <!-- Gráfico Radar -->
-      <div class="w-full h-[400px]">
-        <canvas #radarChartCanvas></canvas>
+    }
+  </section>
+  }
+  <!--sin login-->
+  @if (authState() === AuthState.LoggedOut) {
+  <section class="relative overflow-hidden bg-white-50">
+    <div
+      class="grid container px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
+    >
+      <div class="mr-auto place-self-center lg:col-span-7">
+        <h1
+          class="max-w-2xl mb-5 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl"
+        >
+          Evaluación Nivel de Madurez Tecnológica
+        </h1>
+        <p
+          class="max-w-2xl mb-6 mt-4 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl"
+        >
+          Evalua el nivel de madurez tecnológica de tu empresa y conoce que
+          acciones debes realizar para alcanzar la madurez tecnológica
+        </p>
+        <a
+          routerLink="/registro-industria"
+          class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center rounded-lg bg-primary hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 border border-yellow-500 border-3 hover:border-yellow-600 hover:bg-yellow-500"
+        >
+          Registrate como Empresa
+          <svg
+            class="w-5 h-5 ml-2 -mr-1"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </a>
       </div>
-
-      <!-- Capital Humano Sections -->
-      <div class="space-y-6">
-        <ng-container *ngFor="let item of capitalHumanoSections">
-          <div class="space-y-2">
-            <h3 class="text-xl font-bold text-gray-700">CAPITAL HUMANO:</h3>
-            <p class="text-gray-600">
-              {{ item }}
-            </p>
+      <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+        <img src="assets/hero.webp" alt="mockup" />
+      </div>
+    </div>
+    <div
+      style="padding-top: 0px"
+      class="mt-2 md:mt-0 py-12 pb-6 sm:py-16 lg:pb-24 overflow-hidden"
+    >
+      <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8 relative">
+        <div class="relative mt-12 lg:mt-20">
+          <div
+            class="absolute inset-x-0 hidden xl:px-44 top-2 md:block md:px-20 lg:px-28"
+          >
+            <svg
+              class="w-full"
+              xmlns="http://www.w3.org/2000/svg"
+              width="875"
+              height="48"
+              viewBox="0 0 875 48"
+              fill="none"
+            >
+              <path
+                d="M2 29C20.2154 33.6961 38.9915 35.1324 57.6111 37.5555C80.2065 40.496 102.791 43.3231 125.556 44.5555C163.184 46.5927 201.26 45 238.944 45C312.75 45 385.368 30.7371 458.278 20.6666C495.231 15.5627 532.399 11.6429 569.278 6.11109C589.515 3.07551 609.767 2.09927 630.222 1.99998C655.606 1.87676 681.208 1.11809 706.556 2.44442C739.552 4.17096 772.539 6.75565 805.222 11.5C828 14.8064 850.34 20.2233 873 24"
+                stroke="#D4D4D8"
+                stroke-width="3"
+                stroke-linecap="round"
+                stroke-dasharray="1 12"
+              />
+            </svg>
           </div>
-        </ng-container>
+          <div
+            class="relative grid grid-cols-1 text-center gap-y-8 sm:gap-y-10 md:gap-y-12 md:grid-cols-3 gap-x-12"
+          >
+            <div>
+              <div
+                class="flex items-center justify-center w-16 h-16 mx-auto bg-white border-2 border-gray-200 rounded-full shadow"
+              >
+                <span class="text-xl font-semibold text-gray-700">1</span>
+              </div>
+              <h3
+                class="mt-4 sm:mt-6 text-xl font-semibold leading-tight text-gray-900 md:mt-10"
+              >
+                Registrate
+              </h3>
+              <p class="mt-3 sm:mt-4 text-base text-gray-600">
+                Ve al boton <strong>Registrarse</strong> en la barra de
+                Navegación, y seleciona registrarte como
+                <strong> Empresa de la Region de los Lagos</strong>.
+              </p>
+            </div>
+            <div>
+              <div
+                class="flex items-center justify-center w-16 h-16 mx-auto bg-white border-2 border-gray-200 rounded-full shadow"
+              >
+                <span class="text-xl font-semibold text-gray-700">2</span>
+              </div>
+              <h3
+                class="mt-4 sm:mt-6 text-xl font-semibold leading-tight text-gray-900 md:mt-10"
+              >
+                Completa tu Modelo
+              </h3>
+              <p class="mt-3 sm:mt-4 text-base text-gray-600">
+                Completa tu modelo de <strong>Maduración Tecnológica</strong> y
+                de <strong>Formación</strong>, para descubrir tu nivel actual en
+                la <strong>Industria 4.0</strong>.
+              </p>
+            </div>
+            <div>
+              <div
+                class="flex items-center justify-center w-16 h-16 mx-auto bg-white border-2 border-gray-200 rounded-full shadow"
+              >
+                <span class="text-xl font-semibold text-gray-700">3</span>
+              </div>
+              <h3
+                class="mt-4 sm:mt-6 text-xl font-semibold leading-tight text-gray-900 md:mt-10"
+              >
+                Descubre
+              </h3>
+              <p class="mt-3 sm:mt-4 text-base text-gray-600">
+                Descubre que acciones debes realizar para alcanzar la madurez
+                tecnológica. Encuentra cursos, artículos, financiamiento, entre
+                otros, para mejorar tu empresa.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+  }
 </div>
